# FactorInteger

./: .gitignore  CMakeLists.txt  README.md
cmake/: FactorIntegerConfig.cmake.in
examples/: CMakeLists.txt  factor_integer_example.cpp
include/FactorInteger/: Factorization.hpp
src/: Factorization.cpp
tests/: CMakeLists.txt  test_factorization.cpp
